# ezytutors

./: Cargo.toml  test.rest
tutor-db/: .env  Cargo.toml  database.sql
tutor-db/src/iter2/: handlers.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  routes.rs  state.rs
tutor-db/src/iter4/: db_access.rs  handlers.rs
tutor-db/src/iter5/: errors.rs  routes.rs  state.rs
tutor-db/src/iter5/dbaccess/: course.rs  tutor.rs
tutor-db/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-db/src/iter5/handlers/: course.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  lib.rs  main.rs  model.rs  routes.rs  state.rs
web-service/: Cargo.toml
web-service/src/iter2/: handlers.rs  models.rs
web-service/src/iter3/: db_access.rs
web-service/src/iter4/: errors.rs
web-service/src/iter5/dbaccess/: course.rs  tutor.rs
web-service/src/iter5/dbscripts/: course.sql
web-service/src/iter5/handlers/: tutor.rs
web-ssr/: Cargo.toml
web-ssr/static/: static-web-page.html  styles.css
web-ssr/static/iter1/: index.html
web-ssr/static/iter3/: list.html
web-ssr/static/iter4/: list.html
