[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.68", features = ["vendored"] }
serde = { version = "1.0.213", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
