[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2021"
authors = ["ohmycloud"]
default-run = "tutor-service"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"
